--- a/ios/Runner/RunnerRelease.entitlements
+++ b/ios/Runner/RunnerRelease.entitlements
@@ -3,12 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>aps-environment</key>
+	<string>production</string>
+	<key>com.apple.developer.applesignin</key>
 	<array>
-		<string></string>
+		<string>Default</string>
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:www.hairmainstreet.com</string>
+		<string>applinks:app.hairmainstreet.com</string>
 	</array>
 </dict>
 </plist>
