--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,17 +42,18 @@ dependencies:
   credit_card_validator: ^2.1.0
   cupertino_icons: ^1.0.2
   dropdown_search: ^6.0.1
-  file_picker: ^8.0.3
-  firebase_auth: ^5.1.0
-  firebase_core: ^3.12.1
-  firebase_messaging: ^15.0.1
+  file_picker: ^10.2.0
+  firebase_auth: ^5.7.0
+  firebase_core: ^3.15.1
+  firebase_messaging: ^15.2.9
   firebase_storage: ^12.0.1
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
-  flutter_image_compress: ^2.3.0
-  flutter_local_notifications: ^17.1.2
-  flutter_native_splash: ^2.4.0
+  flutter_image_compress: ^2.4.0
+  flutter_local_notifications: ^19.3.0
+  flutter_luban: ^0.1.15
+  flutter_native_splash: ^2.4.6
   flutter_paystack_max: ^1.0.6
   flutter_rating_bar: ^4.0.1
   flutter_staggered_grid_view: ^0.7.0
@@ -60,12 +61,12 @@ dependencies:
   fluttertoast: ^8.2.2
   get: ^4.6.6
   get_storage: ^2.1.1
-  google_sign_in: ^6.2.1
+  google_sign_in: ^7.0.0
   http: ^1.2.0
   iconify_flutter_plus: ^1.0.3
   image_picker: ^1.0.8
   internet_connection_checker_plus: ^2.7.2
-  intl: ^0.17.0
+  intl: ^0.20.2
   like_button: ^2.0.5
   logger: ^2.5.0
   material_symbols_icons: ^4.2668.0
@@ -76,7 +77,7 @@ dependencies:
   recase: ^4.1.0
   rxdart: ^0.28.0
   scrollable_positioned_list: ^0.3.8
-  share_plus: ^10.1.1
+  share_plus: ^11.0.0
   shared_preferences: ^2.2.2
   shimmer: ^3.0.0
   sign_in_with_apple: ^7.0.1
@@ -85,7 +86,7 @@ dependencies:
   string_validator: ^1.0.0
   timeline_tile: ^2.0.0
   url_launcher: ^6.3.1
-  wolt_modal_sheet: ^0.9.3
+  wolt_modal_sheet: ^0.11.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.1
