--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   image_picker: ^1.0.8
   internet_connection_checker_plus: ^2.7.2
   intl: ^0.20.2
+  keyboard_service: ^2.0.4
   like_button: ^2.0.5
   logger: ^2.5.0
   material_symbols_icons: ^4.2668.0
